Fix iconTile width to render 2 rows on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1050,6 +1050,7 @@ hr {
   @media (max-width: 767px) {
     padding: 0;
     .iconTile {
+      width: 50%;
       margin-top: 24px;
       margin-bottom: 24px;
     }
